--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 *.aux
+*.aws
 *.toc
 *.out
 *.log
 *.tma
 *.dvi
 *.synctex.gz
+ab-access*.pdf
 ou_greyscale_masterlogo_29mm.eps
 ou_greyscale_masterlogo_29mm.pdf
 OU_Master_Logo_Black_CMYK_29mm.eps
