Basic new logo settings

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ ou_greyscale_masterlogo_29mm.eps
 ou_greyscale_masterlogo_29mm.pdf
 OU_Master_Logo_Black_CMYK_29mm.eps
 OU_Master_Logo_Black_CMYK_29mm.pdf
+OU_Master_LOGO_BLACK_17-5mmForA4width.pdf
