--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ ou_greyscale_masterlogo_29mm.pdf
 OU_Master_Logo_Black_CMYK_29mm.eps
 OU_Master_Logo_Black_CMYK_29mm.pdf
 OU_Master_LOGO_BLACK_17-5mmForA4width.pdf
+OU_Compact_LOGO_BLACK_40mm.pdf
